--- a/reportng/pom.xml
+++ b/reportng/pom.xml
@@ -7,7 +7,7 @@
   <name>ReportNG</name>
   <groupId>org.uncommons</groupId>
   <artifactId>reportng</artifactId>
-  <version>@VERSION@</version>
+   <version>1.1.5</version>
   <packaging>jar</packaging>
   <url>https://reportng.dev.java.net/</url>
 
@@ -23,13 +23,44 @@
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>[5.0,)</version>
+      <version>6.10</version>
     </dependency>
     <dependency>
       <groupId>velocity</groupId>
       <artifactId>velocity</artifactId>
       <version>1.4</version>
     </dependency>
+     <dependency>
+         <groupId>com.google.inject</groupId>
+         <artifactId>guice</artifactId>
+         <version>3.0</version>
+         <scope>test</scope>
+     </dependency>
   </dependencies>
-  
+  <build>
+    <plugins>
+    
+       <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>2.18.1</version>
+               <configuration>
+                   <properties>
+                       <property>
+                           <name>usedefaultlisteners</name>
+                           <value>false</value>
+                       </property>
+                       <property>
+                           <name>listener</name>
+                           <value>org.uncommons.reportng.HTMLReporter,org.uncommons.reportng.JUnitXMLReporter</value>
+                       </property>
+                   </properties>
+                  <workingDirectory>target/</workingDirectory>
+               </configuration>
+           </plugin>
+    </plugins>
+  </build>
+     <properties>
+         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+     </properties>
 </project>
